@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Fri, 11 Oct 2024 16:54:26 +0800</lastBuildDate>
+  <lastBuildDate>Fri, 11 Oct 2024 17:07:35 +0800</lastBuildDate>
 <item>
   <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
   <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</link>
@@ -18,5 +18,11 @@
   <description>&lt;h2&gt;K-pop高層在國會審查中迴避關鍵問題&lt;/h2&gt;</description>
   <category>K-Pop</category>
   <pubDate>Fri, 11 Oct 2024 16:54:26 +0800</pubDate>
+</item><item>
+  <title>KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</title>
+  <link>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</link>
+  <description>&lt;h2&gt;K-pop 偶像 lip-sync 爭議再起&lt;/h2&gt;</description>
+  <category>K-Pop</category>
+  <pubDate>Fri, 11 Oct 2024 17:07:35 +0800</pubDate>
 </item></channel>
 </rss>
