@@ -1,0 +1,255 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop \u5076\u50cf\u300c\u5047\u5531\u300d\u722d\u8b70\u518d\u8d77\uff01\u5c08\u5bb6\u7206\u6599\uff1a\u9023\u5168\u7403\u5de8\u661f\u4e5f\u9760\u9810\u9304\u8072\u97f3\u904e\u95dc", "description": "K-pop \u5076\u50cf\u300c\u5047\u5531\u300d\u722d\u8b70\u518d\u8d77\uff01\u5c08\u5bb6\u7206\u6599\uff1a\u9023\u5168\u7403\u5de8\u661f\u4e5f\u9760\u9810\u9304\u8072\u97f3\u904e\u95dc", "url": "https://www.famechos.me/news/K-pop \u5076\u50cf\u300c\u5047\u5531\u300d\u722d\u8b70\u518d\u8d77\uff01\u5c08\u5bb6\u7206\u6599\uff1a\u9023\u5168\u7403\u5de8\u661f\u4e5f\u9760\u9810\u9304\u8072\u97f3\u904e\u95dc.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-11T17:02:22.455988+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop 偶像「假唱」爭議再起！專家爆料：連全球巨星也靠預錄聲音過關.html"/>
+<meta name="description" content="K-pop 偶像「假唱」爭議再起！專家爆料連全球巨星也靠預錄聲音過關，到底是什麼原因導致這種現象？一起來探
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop 偶像「假唱」爭議再起！專家爆料：連全球巨星也靠預錄聲音過關.html" />
+        <meta property="og:title" content="K-pop 偶像「假唱」爭議再起！專家爆料：連全球巨星也靠預錄聲音過關" />
+        <meta property="og:description" content="K-pop 偶像「假唱」爭議再起！專家爆料：連全球巨星也靠預錄聲音過關" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop 偶像「假唱」爭議再起！專家爆料：連全球巨星也靠預錄聲音過關" />
+        <meta property="twitter:description" content="K-pop 偶像「假唱」爭議再起！專家爆料：連全球巨星也靠預錄聲音過關" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop 偶像「假唱」爭議再起！專家爆料：連全球巨星也靠預錄聲音過關</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">11/10/2024</p>
+        </div>
+	<p>隨著 K-pop 偶像在全球日益受歡迎，歌迷對他們的現場表演也有了更高的期望。許多歌迷現在期待在現場表演中聽到令人印象深刻的歌聲，對 lip-sync 的容忍度也越來越低。</p>
+<p>然而，音樂圈內人士解釋說，K-pop 偶像在表演動態舞蹈的同時唱出完美的歌聲幾乎是不可能的。挑戰在於如何將預錄的歌聲與現場唱歌結合起來。</p>
+<p>最近，BLACKPINK 的莉莎被指在 2024 年 MTV 音樂錄影帶大獎和紐約全球公民音樂節上 lip-sync。批評在全球公民音樂節上更加激烈，因為像波兹·马龙和蜜桃貓朵佳這樣的明星也作為頭牌表演，有些歌迷指出泰國音樂家的 lip-sync 是對這樣一場大型活動的不尊重。</p>
+<p>流行音樂評論家金道憲說，lip-sync 表演一直是流行音樂史上的反覆出現的問題。「與過去相比，現在有更多的靈活性。即使是世界知名的藝術家在有舞蹈的表演中也很少唱現場，例如在超級盃中場表演秀中。大多數都是完全的 lip-sync。」</p>
+<p>隨著 A&R 技術的進步和音樂家的經驗積累，現場表演的概念變得越來越模糊——特別是唱現場歌聲在預錄歌聲上變得越來越普遍。</p>
+<p>令人驚訝的是，大多數 K-pop 偶像被傳唱只有 10% 到 20% 的歌曲是現場唱的，不論是在預錄的音樂節目、新聞發布會還是世界巡迴演唱會上。</p>
+<p>音樂評論家 Lim Hee-yun 說：「我們認為是現場的東西往往是預錄的。它遠遠不是我們所認為的傳統現場表演。」即使在演唱會上，偶像大多數都依靠預錄的歌聲，只唱一小部分現場。</p>
+K-pop 偶像經常被說在錄音室錄製特殊的演唱會歌曲，他們在錄音的同時模擬演唱會的氣氛。這些預錄的歌曲然後在現場表演中播放，偶像跟著它們唱。<h2>K-pop 偶像在舞台上 lip-sync：對錯難斷</h2>
+<p><p>近日，K-pop 藝術家在演唱會上使用特定的 MR（音樂刪除）歌曲的做法引起爭議。頂級 K-pop 經紀公司的一位官員承</p>
+<h2>K-pop明星並非唇同步的唯一主人</h2>
+<p>有人認為，在表演高強度舞蹈的同時，歌手無法維持音高穩定。即使是傳奇流行歌手如麥可·傑克遜和瑪丹娜，也曾在演出中使用唇同步，尤其是在1981年MTV啟播後，視頻中心的舞蹈表演變得流行。</p>
+<p>韓國最受歡迎的藝人之一，Trot歌手張允貞，在8月31日在仁川的一場演出中，被指控使用唇同步。張允貞堅決否認任何唇同步行為。然而，音樂評論家指出，演唱會的音響系統不佳可能是引發指控的原因。</p>
+<p>專家解釋，某些地區的場館，音響系統不佳可能會影響現場表演的質量。此外，如果只有部分藝人現場演唱，而其他人則依靠預先錄製的音軌，音質可能會不一致。專家還指出，藝人在一天內參加多場活動，可能無法保持最佳的聲音狀態，因此唇同步成為了一種實際的選擇。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/czO7ADqHAoc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html">KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
