@@ -204,4 +204,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/KPOP風暴來襲！TXT、aespa、The Boyz、BOYNEXTDOOR 四大天團齊發新作與巡演.html</ns0:loc>
+    <ns0:lastmod>2024-10-11T17:07:35+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
